@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,13 +19,21 @@ package org.springframework.test.context.cache;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
+import org.springframework.aot.AotDetector;
 import org.springframework.context.ApplicationContext;
+import org.springframework.context.ApplicationContextInitializer;
+import org.springframework.context.ConfigurableApplicationContext;
+import org.springframework.context.support.GenericApplicationContext;
+import org.springframework.core.log.LogMessage;
 import org.springframework.lang.Nullable;
 import org.springframework.test.annotation.DirtiesContext.HierarchyMode;
 import org.springframework.test.context.CacheAwareContextLoaderDelegate;
 import org.springframework.test.context.ContextLoader;
 import org.springframework.test.context.MergedContextConfiguration;
 import org.springframework.test.context.SmartContextLoader;
+import org.springframework.test.context.aot.AotContextLoader;
+import org.springframework.test.context.aot.TestAotMappings;
+import org.springframework.test.context.aot.TestContextAotException;
 import org.springframework.util.Assert;
 
 /**
@@ -47,6 +55,9 @@ public class DefaultCacheAwareContextLoaderDelegate implements CacheAwareContext
 	 * Default static cache of Spring application contexts.
 	 */
 	static final ContextCache defaultContextCache = new DefaultContextCache();
+
+	@Nullable
+	private final TestAotMappings testAotMappings = getTestAotMappings();
 
 	private final ContextCache contextCache;
 
@@ -73,39 +84,6 @@ public class DefaultCacheAwareContextLoaderDelegate implements CacheAwareContext
 		this.contextCache = contextCache;
 	}
 
-	/**
-	 * Get the {@link ContextCache} used by this context loader delegate.
-	 */
-	protected ContextCache getContextCache() {
-		return this.contextCache;
-	}
-
-	/**
-	 * Load the {@code ApplicationContext} for the supplied merged context configuration.
-	 * <p>Supports both the {@link SmartContextLoader} and {@link ContextLoader} SPIs.
-	 * @throws Exception if an error occurs while loading the application context
-	 */
-	protected ApplicationContext loadContextInternal(MergedContextConfiguration mergedContextConfiguration)
-			throws Exception {
-
-		ContextLoader contextLoader = mergedContextConfiguration.getContextLoader();
-		Assert.notNull(contextLoader, "Cannot load an ApplicationContext with a NULL 'contextLoader'. " +
-				"Consider annotating your test class with @ContextConfiguration or @ContextHierarchy.");
-
-		ApplicationContext applicationContext;
-
-		if (contextLoader instanceof SmartContextLoader smartContextLoader) {
-			applicationContext = smartContextLoader.loadContext(mergedContextConfiguration);
-		}
-		else {
-			String[] locations = mergedContextConfiguration.getLocations();
-			Assert.notNull(locations, "Cannot load an ApplicationContext with a NULL 'locations' array. " +
-					"Consider annotating your test class with @ContextConfiguration or @ContextHierarchy.");
-			applicationContext = contextLoader.loadContext(locations);
-		}
-
-		return applicationContext;
-	}
 
 	@Override
 	public boolean isContextLoaded(MergedContextConfiguration mergedContextConfiguration) {
@@ -120,20 +98,26 @@ public class DefaultCacheAwareContextLoaderDelegate implements CacheAwareContext
 			ApplicationContext context = this.contextCache.get(mergedContextConfiguration);
 			if (context == null) {
 				try {
-					context = loadContextInternal(mergedContextConfiguration);
+					if (runningInAotMode(mergedContextConfiguration.getTestClass())) {
+						context = loadContextInAotMode(mergedContextConfiguration);
+					}
+					else {
+						context = loadContextInternal(mergedContextConfiguration);
+					}
 					if (logger.isDebugEnabled()) {
-						logger.debug(String.format("Storing ApplicationContext [%s] in cache under key [%s]",
+						logger.debug("Storing ApplicationContext [%s] in cache under key %s".formatted(
 								System.identityHashCode(context), mergedContextConfiguration));
 					}
 					this.contextCache.put(mergedContextConfiguration, context);
 				}
 				catch (Exception ex) {
-					throw new IllegalStateException("Failed to load ApplicationContext", ex);
+					throw new IllegalStateException(
+						"Failed to load ApplicationContext for " + mergedContextConfiguration, ex);
 				}
 			}
 			else {
 				if (logger.isDebugEnabled()) {
-					logger.debug(String.format("Retrieved ApplicationContext [%s] from cache with key [%s]",
+					logger.debug("Retrieved ApplicationContext [%s] from cache with key %s".formatted(
 							System.identityHashCode(context), mergedContextConfiguration));
 				}
 			}
@@ -149,6 +133,87 @@ public class DefaultCacheAwareContextLoaderDelegate implements CacheAwareContext
 		synchronized (this.contextCache) {
 			this.contextCache.remove(mergedContextConfiguration, hierarchyMode);
 		}
+	}
+
+	/**
+	 * Get the {@link ContextCache} used by this context loader delegate.
+	 */
+	protected ContextCache getContextCache() {
+		return this.contextCache;
+	}
+
+	/**
+	 * Load the {@code ApplicationContext} for the supplied merged context configuration.
+	 * <p>Supports both the {@link SmartContextLoader} and {@link ContextLoader} SPIs.
+	 * @throws Exception if an error occurs while loading the application context
+	 */
+	@SuppressWarnings("deprecation")
+	protected ApplicationContext loadContextInternal(MergedContextConfiguration mergedContextConfiguration)
+			throws Exception {
+
+		ContextLoader contextLoader = getContextLoader(mergedContextConfiguration);
+		if (contextLoader instanceof SmartContextLoader smartContextLoader) {
+			return smartContextLoader.loadContext(mergedContextConfiguration);
+		}
+		else {
+			String[] locations = mergedContextConfiguration.getLocations();
+			Assert.notNull(locations, """
+					Cannot load an ApplicationContext with a NULL 'locations' array. \
+					Consider annotating test class [%s] with @ContextConfiguration or \
+					@ContextHierarchy.""".formatted(mergedContextConfiguration.getTestClass().getName()));
+			return contextLoader.loadContext(locations);
+		}
+	}
+
+	protected ApplicationContext loadContextInAotMode(MergedContextConfiguration mergedConfig) throws Exception {
+		Class<?> testClass = mergedConfig.getTestClass();
+		ApplicationContextInitializer<ConfigurableApplicationContext> contextInitializer =
+				this.testAotMappings.getContextInitializer(testClass);
+		Assert.state(contextInitializer != null,
+				() -> "Failed to load AOT ApplicationContextInitializer for test class [%s]"
+						.formatted(testClass.getName()));
+		ContextLoader contextLoader = getContextLoader(mergedConfig);
+		logger.info(LogMessage.format("Loading ApplicationContext in AOT mode for %s", mergedConfig));
+		if (!((contextLoader instanceof AotContextLoader aotContextLoader) &&
+				(aotContextLoader.loadContextForAotRuntime(mergedConfig, contextInitializer)
+						instanceof GenericApplicationContext gac))) {
+			throw new TestContextAotException("""
+					Cannot load ApplicationContext for AOT runtime for %s. The configured \
+					ContextLoader [%s] must be an AotContextLoader and must create a \
+					GenericApplicationContext."""
+						.formatted(mergedConfig, contextLoader.getClass().getName()));
+		}
+		gac.registerShutdownHook();
+		return gac;
+	}
+
+	private ContextLoader getContextLoader(MergedContextConfiguration mergedConfig) {
+		ContextLoader contextLoader = mergedConfig.getContextLoader();
+		Assert.notNull(contextLoader, """
+				Cannot load an ApplicationContext with a NULL 'contextLoader'. \
+				Consider annotating test class [%s] with @ContextConfiguration or \
+				@ContextHierarchy.""".formatted(mergedConfig.getTestClass().getName()));
+		return contextLoader;
+	}
+
+	/**
+	 * Determine if we are running in AOT mode for the supplied test class.
+	 */
+	private boolean runningInAotMode(Class<?> testClass) {
+		return (this.testAotMappings != null && this.testAotMappings.isSupportedTestClass(testClass));
+	}
+
+	@Nullable
+	private static TestAotMappings getTestAotMappings() {
+		if (AotDetector.useGeneratedArtifacts()) {
+			try {
+				return new TestAotMappings();
+			}
+			catch (Exception ex) {
+				throw new IllegalStateException("Failed to instantiate TestAotMappings", ex);
+			}
+		}
+		return null;
 	}
 
 }
