@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,16 +17,19 @@
 package org.springframework.web.reactive.resource;
 
 import java.io.IOException;
+import java.nio.file.Paths;
 import java.time.Duration;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Stream;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
@@ -44,6 +47,7 @@ import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.server.PathContainer;
+import org.springframework.util.ClassUtils;
 import org.springframework.util.StringUtils;
 import org.springframework.web.reactive.HandlerMapping;
 import org.springframework.web.server.MethodNotAllowedException;
@@ -67,20 +71,25 @@ import static org.mockito.Mockito.mock;
  * Unit tests for {@link ResourceWebHandler}.
  *
  * @author Rossen Stoyanchev
+ * @author Sam Brannen
  */
-public class ResourceWebHandlerTests {
+class ResourceWebHandlerTests {
 
 	private static final Duration TIMEOUT = Duration.ofSeconds(1);
+
+	private final ClassPathResource testResource = new ClassPathResource("test/", getClass());
+	private final ClassPathResource testAlternatePathResource = new ClassPathResource("testalternatepath/", getClass());
+	private final ClassPathResource webjarsResource = new ClassPathResource("META-INF/resources/webjars/");
 
 	private ResourceWebHandler handler;
 
 
 	@BeforeEach
-	public void setup() throws Exception {
-		List<Resource> locations = new ArrayList<>(2);
-		locations.add(new ClassPathResource("test/", getClass()));
-		locations.add(new ClassPathResource("testalternatepath/", getClass()));
-		locations.add(new ClassPathResource("META-INF/resources/webjars/"));
+	void setup() throws Exception {
+		List<Resource> locations = List.of(
+				this.testResource,
+				this.testAlternatePathResource,
+				this.webjarsResource);
 
 		this.handler = new ResourceWebHandler();
 		this.handler.setLocations(locations);
@@ -90,7 +99,7 @@ public class ResourceWebHandlerTests {
 
 
 	@Test
-	public void getResource() throws Exception {
+	void getResource() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.handle(exchange).block(TIMEOUT);
@@ -102,12 +111,12 @@ public class ResourceWebHandlerTests {
 		assertThat(headers.containsKey("Last-Modified")).isTrue();
 		assertThat(resourceLastModifiedDate("test/foo.css") / 1000).isEqualTo(headers.getLastModified() / 1000);
 		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(headers.get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "h1 { color:red; }");
 	}
 
 	@Test
-	public void getResourceHttpHeader() throws Exception {
+	void getResourceHttpHeader() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.head(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.handle(exchange).block(TIMEOUT);
@@ -127,7 +136,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getResourceHttpOptions() {
+	void getResourceHttpOptions() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.options(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.handle(exchange).block(TIMEOUT);
@@ -137,7 +146,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getResourceNoCache() throws Exception {
+	void getResourceNoCache() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.setCacheControl(CacheControl.noStore());
@@ -148,14 +157,14 @@ public class ResourceWebHandlerTests {
 		assertThat(response.getHeaders().containsKey("Last-Modified")).isTrue();
 		assertThat(resourceLastModifiedDate("test/foo.css") / 1000).isEqualTo(response.getHeaders().getLastModified() / 1000);
 		assertThat(response.getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(response.getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(response.getHeaders().get("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getVersionedResource() throws Exception {
+	void getVersionedResource() throws Exception {
 		VersionResourceResolver versionResolver = new VersionResourceResolver();
 		versionResolver.addFixedVersionStrategy("versionString", "/**");
-		this.handler.setResourceResolvers(Arrays.asList(versionResolver, new PathResourceResolver()));
+		this.handler.setResourceResolvers(List.of(versionResolver, new PathResourceResolver()));
 		this.handler.afterPropertiesSet();
 
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
@@ -164,11 +173,11 @@ public class ResourceWebHandlerTests {
 
 		assertThat(exchange.getResponse().getHeaders().getETag()).isEqualTo("W/\"versionString\"");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getResourceWithHtmlMediaType() throws Exception {
+	void getResourceWithHtmlMediaType() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "foo.html");
 		this.handler.handle(exchange).block(TIMEOUT);
@@ -179,11 +188,11 @@ public class ResourceWebHandlerTests {
 		assertThat(headers.containsKey("Last-Modified")).isTrue();
 		assertThat(resourceLastModifiedDate("test/foo.html") / 1000).isEqualTo(headers.getLastModified() / 1000);
 		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(headers.get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getResourceFromAlternatePath() throws Exception {
+	void getResourceFromAlternatePath() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "baz.css");
 		this.handler.handle(exchange).block(TIMEOUT);
@@ -195,12 +204,12 @@ public class ResourceWebHandlerTests {
 		assertThat(headers.containsKey("Last-Modified")).isTrue();
 		assertThat(resourceLastModifiedDate("testalternatepath/baz.css") / 1000).isEqualTo(headers.getLastModified() / 1000);
 		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(headers.get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "h1 { color:red; }");
 	}
 
 	@Test
-	public void getResourceFromSubDirectory() {
+	void getResourceFromSubDirectory() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "js/foo.js");
 		this.handler.handle(exchange).block(TIMEOUT);
@@ -210,7 +219,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getResourceFromSubDirectoryOfAlternatePath() {
+	void getResourceFromSubDirectoryOfAlternatePath() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "js/baz.js");
 		this.handler.handle(exchange).block(TIMEOUT);
@@ -221,11 +230,11 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getResourceWithRegisteredMediaType() throws Exception {
+	void getResourceWithRegisteredMediaType() throws Exception {
 		MediaType mediaType = new MediaType("foo", "bar");
 
 		ResourceWebHandler handler = new ResourceWebHandler();
-		handler.setLocations(Collections.singletonList(new ClassPathResource("test/", getClass())));
+		handler.setLocations(List.of(new ClassPathResource("test/", getClass())));
 		handler.setMediaTypes(Collections.singletonMap("bar", mediaType));
 		handler.afterPropertiesSet();
 
@@ -239,12 +248,12 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getResourceFromFileSystem() throws Exception {
-		String path = new ClassPathResource("", getClass()).getFile().getCanonicalPath()
-				.replace('\\', '/').replace("classes/java", "resources") + "/";
+	void getResourceFromFileSystem() throws Exception {
+		String packagePath = ClassUtils.classPackageAsResourcePath(getClass());
+		String path = Paths.get("src/test/resources", packagePath).normalize() + "/";
 
 		ResourceWebHandler handler = new ResourceWebHandler();
-		handler.setLocations(Collections.singletonList(new FileSystemResource(path)));
+		handler.setLocations(List.of(new FileSystemResource(path)));
 		handler.afterPropertiesSet();
 
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
@@ -258,8 +267,8 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test  // gh-27538, gh-27624
-	public void filterNonExistingLocations() throws Exception {
-		List<Resource> inputLocations = Arrays.asList(
+	void filterNonExistingLocations() throws Exception {
+		List<Resource> inputLocations = List.of(
 				new ClassPathResource("test/", getClass()),
 				new ClassPathResource("testalternatepath/", getClass()),
 				new ClassPathResource("nosuchpath/", getClass()));
@@ -276,8 +285,8 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test // SPR-14577
-	public void getMediaTypeWithFavorPathExtensionOff() throws Exception {
-		List<Resource> paths = Collections.singletonList(new ClassPathResource("test/", getClass()));
+	void getMediaTypeWithFavorPathExtensionOff() throws Exception {
+		List<Resource> paths = List.of(new ClassPathResource("test/", getClass()));
 		ResourceWebHandler handler = new ResourceWebHandler();
 		handler.setLocations(paths);
 		handler.afterPropertiesSet();
@@ -291,7 +300,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void testInvalidPath() throws Exception {
+	void invalidPath() throws Exception {
 
 		// Use mock ResourceResolver: i.e. we're only testing upfront validations...
 
@@ -302,8 +311,8 @@ public class ResourceWebHandlerTests {
 		given(resolver.resolveResource(any(), any(), any(), any())).willReturn(Mono.just(resource));
 
 		ResourceWebHandler handler = new ResourceWebHandler();
-		handler.setLocations(Collections.singletonList(new ClassPathResource("test/", getClass())));
-		handler.setResourceResolvers(Collections.singletonList(resolver));
+		handler.setLocations(List.of(new ClassPathResource("test/", getClass())));
+		handler.setResourceResolvers(List.of(resolver));
 		handler.afterPropertiesSet();
 
 		testInvalidPath("../testsecret/secret.txt", handler);
@@ -311,7 +320,7 @@ public class ResourceWebHandlerTests {
 		testInvalidPath(":/../../testsecret/secret.txt", handler);
 
 		Resource location = new UrlResource(getClass().getResource("./test/"));
-		this.handler.setLocations(Collections.singletonList(location));
+		handler.setLocations(List.of(location));
 		Resource secretResource = new UrlResource(getClass().getResource("testsecret/secret.txt"));
 		String secretPath = secretResource.getURL().getPath();
 
@@ -336,34 +345,29 @@ public class ResourceWebHandlerTests {
 				}).verify(TIMEOUT);
 	}
 
-	@Test
-	public void testResolvePathWithTraversal() throws Exception {
-		for (HttpMethod method : HttpMethod.values()) {
-			testResolvePathWithTraversal(method);
-		}
-	}
-
-	private void testResolvePathWithTraversal(HttpMethod httpMethod) throws Exception {
+	@ParameterizedTest
+	@MethodSource("httpMethods")
+	void resolvePathWithTraversal(HttpMethod method) throws Exception {
 		Resource location = new ClassPathResource("test/", getClass());
-		this.handler.setLocations(Collections.singletonList(location));
+		this.handler.setLocations(List.of(location));
 
-		testResolvePathWithTraversal(httpMethod, "../testsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, "test/../../testsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, ":/../../testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "../testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "test/../../testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, ":/../../testsecret/secret.txt", location);
 
 		location = new UrlResource(getClass().getResource("./test/"));
-		this.handler.setLocations(Collections.singletonList(location));
+		this.handler.setLocations(List.of(location));
 		Resource secretResource = new UrlResource(getClass().getResource("testsecret/secret.txt"));
 		String secretPath = secretResource.getURL().getPath();
 
-		testResolvePathWithTraversal(httpMethod, "file:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "/file:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "url:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "/url:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "////../.." + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "/%2E%2E/testsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, "%2F%2F%2E%2E%2F%2Ftestsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, "url:" + secretPath, location);
+		testResolvePathWithTraversal(method, "file:" + secretPath, location);
+		testResolvePathWithTraversal(method, "/file:" + secretPath, location);
+		testResolvePathWithTraversal(method, "url:" + secretPath, location);
+		testResolvePathWithTraversal(method, "/url:" + secretPath, location);
+		testResolvePathWithTraversal(method, "////../.." + secretPath, location);
+		testResolvePathWithTraversal(method, "/%2E%2E/testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "%2F%2F%2E%2E%2F%2Ftestsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "url:" + secretPath, location);
 
 		// The following tests fail with a MalformedURLException on Windows
 		// testResolvePathWithTraversal(location, "/" + secretPath);
@@ -387,7 +391,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void processPath() {
+	void processPath() {
 		assertThat(this.handler.processPath("/foo/bar")).isSameAs("/foo/bar");
 		assertThat(this.handler.processPath("foo/bar")).isSameAs("foo/bar");
 
@@ -416,18 +420,15 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void initAllowedLocations() {
+	void initAllowedLocations() {
 		PathResourceResolver resolver = (PathResourceResolver) this.handler.getResourceResolvers().get(0);
 		Resource[] locations = resolver.getAllowedLocations();
 
-		assertThat(locations.length).isEqualTo(3);
-		assertThat(((ClassPathResource) locations[0]).getPath()).isEqualTo("test/");
-		assertThat(((ClassPathResource) locations[1]).getPath()).isEqualTo("testalternatepath/");
-		assertThat(((ClassPathResource) locations[2]).getPath()).isEqualTo("META-INF/resources/webjars/");
+		assertThat(locations).containsExactly(this.testResource, this.testAlternatePathResource, this.webjarsResource);
 	}
 
 	@Test
-	public void initAllowedLocationsWithExplicitConfiguration() throws Exception {
+	void initAllowedLocationsWithExplicitConfiguration() throws Exception {
 		ClassPathResource location1 = new ClassPathResource("test/", getClass());
 		ClassPathResource location2 = new ClassPathResource("testalternatepath/", getClass());
 
@@ -435,17 +436,15 @@ public class ResourceWebHandlerTests {
 		pathResolver.setAllowedLocations(location1);
 
 		ResourceWebHandler handler = new ResourceWebHandler();
-		handler.setResourceResolvers(Collections.singletonList(pathResolver));
-		handler.setLocations(Arrays.asList(location1, location2));
+		handler.setResourceResolvers(List.of(pathResolver));
+		handler.setLocations(List.of(location1, location2));
 		handler.afterPropertiesSet();
 
-		Resource[] locations = pathResolver.getAllowedLocations();
-		assertThat(locations.length).isEqualTo(1);
-		assertThat(((ClassPathResource) locations[0]).getPath()).isEqualTo("test/");
+		assertThat(pathResolver.getAllowedLocations()).containsExactly(location1);
 	}
 
 	@Test
-	public void notModified() throws Exception {
+	void notModified() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(
 				MockServerHttpRequest.get("").ifModifiedSince(resourceLastModified("test/foo.css")));
 
@@ -455,7 +454,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void modified() throws Exception {
+	void modified() throws Exception {
 		long timestamp = resourceLastModified("test/foo.css") / 1000 * 1000 - 1;
 		MockServerHttpRequest request = MockServerHttpRequest.get("").ifModifiedSince(timestamp).build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
@@ -467,7 +466,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void directory() {
+	void directory() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "js/");
 		StepVerifier.create(this.handler.handle(exchange))
@@ -478,7 +477,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void directoryInJarFile() {
+	void directoryInJarFile() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "underscorejs/");
 		StepVerifier.create(this.handler.handle(exchange))
@@ -489,7 +488,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void missingResourcePath() {
+	void missingResourcePath() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "");
 		StepVerifier.create(this.handler.handle(exchange))
@@ -500,29 +499,24 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void noPathWithinHandlerMappingAttribute() {
+	void noPathWithinHandlerMappingAttribute() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		assertThatIllegalArgumentException().isThrownBy(() ->
 				this.handler.handle(exchange).block(TIMEOUT));
 	}
 
 	@Test
-	public void unsupportedHttpMethod() {
+	void unsupportedHttpMethod() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.post(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		assertThatExceptionOfType(MethodNotAllowedException.class).isThrownBy(() ->
 				this.handler.handle(exchange).block(TIMEOUT));
 	}
 
-	@Test
-	public void resourceNotFound() throws Exception {
-		for (HttpMethod method : HttpMethod.values()) {
-			resourceNotFound(method);
-		}
-	}
-
-	private void resourceNotFound(HttpMethod httpMethod) {
-		MockServerHttpRequest request = MockServerHttpRequest.method(httpMethod, "").build();
+	@ParameterizedTest
+	@MethodSource("httpMethods")
+	void resourceNotFound(HttpMethod method) throws Exception {
+		MockServerHttpRequest request = MockServerHttpRequest.method(method, "").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "not-there.css");
 		Mono<Void> mono = this.handler.handle(exchange);
@@ -540,7 +534,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void partialContentByteRange() {
+	void partialContentByteRange() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("Range", "bytes=0-1").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -551,12 +545,12 @@ public class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(2);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 0-1/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "So");
 	}
 
 	@Test
-	public void partialContentByteRangeNoEnd() {
+	void partialContentByteRangeNoEnd() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=9-").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -567,12 +561,12 @@ public class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(1);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 9-9/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, ".");
 	}
 
 	@Test
-	public void partialContentByteRangeLargeEnd() {
+	void partialContentByteRangeLargeEnd() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=9-10000").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -583,12 +577,12 @@ public class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(1);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 9-9/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, ".");
 	}
 
 	@Test
-	public void partialContentSuffixRange() {
+	void partialContentSuffixRange() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=-1").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -599,12 +593,12 @@ public class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(1);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 9-9/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, ".");
 	}
 
 	@Test
-	public void partialContentSuffixRangeLargeSuffix() {
+	void partialContentSuffixRangeLargeSuffix() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=-11").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -615,12 +609,12 @@ public class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(10);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 0-9/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "Some text.");
 	}
 
 	@Test
-	public void partialContentInvalidRangeHeader() {
+	void partialContentInvalidRangeHeader() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=foo bar").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -635,7 +629,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void partialContentMultipleByteRanges() {
+	void partialContentMultipleByteRanges() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("Range", "bytes=0-1, 4-5, 8-9").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -648,7 +642,7 @@ public class ResourceWebHandlerTests {
 		String boundary = "--" + exchange.getResponse().getHeaders().getContentType().toString().substring(30);
 
 		Mono<DataBuffer> reduced = Flux.from(exchange.getResponse().getBody())
-				.reduce(DefaultDataBufferFactory.sharedInstance.allocateBuffer(), (previous, current) -> {
+				.reduce(DefaultDataBufferFactory.sharedInstance.allocateBuffer(256), (previous, current) -> {
 					previous.write(current);
 					DataBufferUtils.release(current);
 					return previous;
@@ -679,7 +673,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test  // SPR-14005
-	public void doOverwriteExistingCacheControlHeaders() {
+	void doOverwriteExistingCacheControlHeaders() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		exchange.getResponse().getHeaders().setCacheControl(CacheControl.noStore().getHeaderValue());
 		setPathWithinHandlerMapping(exchange, "foo.css");
@@ -721,6 +715,11 @@ public class ResourceWebHandlerTests {
 				.consumeNextWith(buf -> assertThat(buf.toString(UTF_8)).isEqualTo(responseBody))
 				.expectComplete()
 				.verify();
+	}
+
+
+	static Stream<HttpMethod> httpMethods() {
+		return Arrays.stream(HttpMethod.values());
 	}
 
 }
